--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,127 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
 .App {
   text-align: center;
 }
+
+.grid-container {
+  display: grid;
+  height: 300px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.pics{
+  height: 250px;
+  width:250px;
+  margin: 1em;
+}
+
+.icon{
+  height: 20px;
+  width: 20px;
+}
+
+.label-containerFlex{
+  display: flex;
+}
+
+#red #green #name{
+  flex:1;
+}
+
+.body-container{
+  background: red;
+}
+
+.header{
+  background: yellow;
+  min-height: 100px;
+}
+.panel{
+  background: purple;
+  margin: 0 auto;
+  width: 1200px;
+  min-height: 100px;
+  
+}
+
+.body-flex{
+  margin:0 auto;
+  display:flex;
+  width: 1200px;
+  min-height: 1500px;
+}
+
+.side-panel{
+  background:green;
+  width: 400px;
+  
+}
+
+.gallery-panel{
+  flex: 1;
+  margin-left:3em;
+}
+
+#top{
+  background: pink;
+  height: 200px;
+}
+
+#bottom{
+  background: skyblue;
+  height: 600px;
+  font-family: sans-serif,
+}
+
 
