--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,9 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+	font-family: sans-serif;
+  vertical-align: baseline;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -29,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
 ol, ul {
 	list-style: none;
@@ -48,22 +49,35 @@ table {
 }
 
 
-
 .App {
   text-align: center;
+}
+
+.wrap{
+
+  background: white;
+  opacity: 0.8;
+  width:253px;
+  height: 300px;
+  border: 1px solid rgb(226, 226, 226);
+
+
 }
 
 .grid-container {
   display: grid;
   height: 300px;
+  margin-left: 5px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
+  width:700px;
 }
 
 .pics{
-  height: 250px;
-  width:250px;
-  margin: 1em;
+  height: 200px;
+  width:200px;
+  margin: 15px 25px;
+  opacity: 1;
 }
 
 .icon{
@@ -73,55 +87,128 @@ table {
 
 .label-containerFlex{
   display: flex;
+  width:250px;
 }
 
-#red #green #name{
+#name {
+  flex:3;
+}
+
+.icon{
   flex:1;
 }
 
 .body-container{
-  background: red;
+  background: white;
+  width:100%;
+  background-image: url("https://c.wallhere.com/photos/a0/41/4027x3000_px_Asian_breakfast_cat_Chilli_Peppers_Cook_Cooking_dog-526650.jpg!d");
+  background-size: cover;
+  background-repeat: no-repeat; 
 }
 
-.header{
-  background: yellow;
+.header-flex{
+  background: white;
   min-height: 100px;
+  width: 100%;
 }
 .panel{
-  background: purple;
   margin: 0 auto;
   width: 1200px;
   min-height: 100px;
-  
 }
 
-.body-flex{
+.body{
   margin:0 auto;
-  display:flex;
   width: 1200px;
-  min-height: 1500px;
+  min-height: 1400px;
+  display: flex;
 }
 
-.side-panel{
-  background:green;
+.side{
+  border: 2px solid gray;
+  background: white;
+  opacity: 0.8;
+  height: 100%;
+  flex:1;
   width: 400px;
+}
+.grid-container{
+  flex:5;
+  margin: 0 auto;
+}
+.gallery{
+  width:200px;
+}
+
+
+input {
+  display: block;
+  width: 200px;
+  margin: 5px 5px;
+  height: 1em;
+  font-size: 14px;
+  font-family: sans-serif;
+}
+
+p{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 36px;
+}
+
+button{
+  font-size: 16px;
+  border: 1px rgb(203, 232, 202) outset;
+}
+
+.imageDelete{
+  height: 2em;
+  width:2em;
+}
+
+#deleter{
+  width: 10px;
+  height:10px;
+  border-radius: 100px;
+}
+
+.pics-found{
+  heigth: 100px;
+  width: 100px;
   
 }
 
-.gallery-panel{
-  flex: 1;
-  margin-left:3em;
+.gallery-found{
+  width: 200px;
+  margin-top:5px;
 }
 
-#top{
-  background: pink;
-  height: 200px;
+.wrap-flex{
+  display: inline;
+  width: 200px;
 }
 
-#bottom{
-  background: skyblue;
-  height: 600px;
-  font-family: sans-serif,
+.label-found{
+  font-size: 10px;
+  margin: 0 auto;
+  display:inline;
+
 }
 
+#plus{
+  display:inline;
+}
+
+.Header__parent{
+  background-image:url("http://theartofcheese.com/wp-content/uploads/2014/09/aochead6.jpg?ef16b5");
+  background-size: 2000px 300px, cover;
+  background-repeat: no-repeat; 
+}
+
+.addLogo{
+  height: 70px;
+}
+
+.imageHolder{
+  border: 0px;
+} 
 
